# down_detector

./: .dockerignore  Dockerfile  PHASE2_PROMPT.md  REBUILD_PROMPT.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
config/: services.yaml
src/down_detector/: scheduler.py  store.py
src/down_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/down_detector/collectors/: base.py  gcp.py
src/down_detector/filters/: region.py
src/download_detector/: config.py  main.py  models.py
src/download_detector.egg-info/: PKG-INFO  SOURCES.txt
src/download_detector/collectors/: azure.py  base.py  cloudflare.py  oci.py
src/download_detector/ui/: terminal.py  web.py
tests/: conftest.py  test_filters.py  test_models.py
