[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "down-detector"
version = "0.1.0"
description = "Cloud service status monitor for Azure, OCI, GCP, and Cloudflare (USA regions)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "feedparser>=6.0",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "pytest-cov>=5.0"]

[project.scripts]
down-detector = "down_detector.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
